# atlas-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  langgraph.json  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: README.md  extending.md  getting-started.md  publishing.md  troubleshooting.md
docs/architecture/: architecture.md
docs/demo/: demo.md
docs/evaluation/: clean-clone-v0.3.0.md  evaluation.md
docs/product/: phase-2-workspace.md
docs/safety/: safety.md
evals/: cases.json  run_evals.py
examples/: custom_tool.py
src/atlas_agent/: __init__.py  api.py  brain.py  cli.py  config.py  graph.py  memory.py  prompts.py  runtime.py  schemas.py  state.py  studio.py
src/atlas_agent/static/: app.js  index.html  styles.css
src/atlas_agent/tools/: __init__.py  calculator.py  files.py  python_exec.py  registry.py  web_search.py
tests/: ui_fixture.py
tests/e2e/: accessibility.spec.js  helpers.js
tests/evals/: test_offline_evals.py
tests/integration/: test_api.py  test_graph.py  test_runtime.py
tests/unit/: test_brain.py  test_cli.py  test_config.py  test_memory.py  test_schemas.py  test_static_ui.py
tests/unit/tools/: test_calculator.py  test_files.py  test_python_exec.py  test_registry.py  test_web_search.py
