[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[project]
name = "atlas-agent"
version = "0.3.1"
description = "A durable LangGraph agent that plans complex work and safely uses real tools."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "Fortune Vieyra" }]
keywords = ["agents", "ai", "langgraph", "langchain", "rag", "tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "aiosqlite>=0.22,<1",
  "ddgs>=9.14,<10",
  "fastapi>=0.139,<1",
  "filelock>=3.20,<4",
  "langchain>=1.3,<2",
  "langchain-openai>=1.3,<2",
  "langgraph>=1.2,<2",
  "langgraph-checkpoint-sqlite>=3.1,<4",
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.13,<3",
  "python-dotenv>=1.2,<2",
  "rich>=14.3,<15",
  "tavily-python>=0.7,<1",
  "typer>=0.24,<1",
  "uvicorn[standard]>=0.41,<1",
]

[project.urls]
Homepage = "https://github.com/ownasquare/atlas-agent"
Documentation = "https://github.com/ownasquare/atlas-agent/tree/main/docs"
Repository = "https://github.com/ownasquare/atlas-agent"
Issues = "https://github.com/ownasquare/atlas-agent/issues"
Changelog = "https://github.com/ownasquare/atlas-agent/blob/main/CHANGELOG.md"

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=1.3,<2"]
dev = [
  "cryptography>=48.0.1,<49",
  "httpx>=0.28,<1",
  "langgraph-cli[inmem]>=0.4.31,<0.5",
  "mypy>=1.19,<2",
  "pytest>=9.0,<10",
  "pytest-asyncio>=1.3,<2",
  "pytest-cov>=7.0,<8",
  "ruff>=0.15,<1",
]

[project.scripts]
atlas = "atlas_agent.cli:app"
atlas-api = "atlas_agent.api:main"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas_agent"]

[tool.uv]
default-groups = []

[dependency-groups]
dev = [
  "cryptography>=48.0.1,<49",
  "httpx>=0.28,<1",
  "langgraph-cli[inmem]>=0.4.31,<0.5",
  "mypy>=1.19,<2",
  "pytest>=9.0,<10",
  "pytest-asyncio>=1.3,<2",
  "pytest-cov>=7.0,<8",
  "ruff>=0.15,<1",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["live: requires live model or search provider credentials"]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["atlas_agent"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
packages = ["atlas_agent"]

[[tool.mypy.overrides]]
module = ["ddgs.*", "tavily.*"]
ignore_missing_imports = true
